--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <i class="fas fa-angle-up"></i>
     </div>
     <!-- start preloader -->
-    <div class="preloader">
+<!--     <div class="preloader">
         <div class="wraper">
             <img src="images/13-pizza-outline.gif" alt="">
         </div>
 
-    </div>
+    </div> -->
     <!-- end preloader-->
     <header>
         <!-- header secrion starts <i class="fas fa-hamburger"></i> -->
