--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/review/r1.png" alt="">
+                <img src="images/review/r1.jpg" alt="">
                 <h3>Nancy Jwel</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -844,7 +844,7 @@
                     maxime.</p>
             </div>
             <div class="box">
-                <img src="images/review/r4.png" alt="">
+                <img src="images/review/r4.jpg" alt="">
                 <h3>Kim Tae-hyung (V)</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -857,7 +857,7 @@
                     ratione.</p>
             </div>
             <div class="box">
-                <img src="images/review/r2.png" alt="">
+                <img src="images/review/r2.jpg" alt="">
                 <h3>Lisa Manoban</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -870,7 +870,7 @@
                     ratioue.</p>
             </div>
             <div class="box">
-                <img src="images/review/r3.png" alt="">
+                <img src="images/review/r3.jpg" alt="">
                 <h3>Mike D'Angelo</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
